Make target blank safe

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       others how to do it
     </p>
     <div id="about-social-media">
-      <a target="blank" href="https://www.instagram.com/nellysugu/">
+      <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/nellysugu/">
         <img class="social-media-icon" src="./resources/instagram-logo.png" alt="instagram logo" />
       </a>
-      <a target="blank" href="https://www.linkedin.com/in/nellysugu/">
+      <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/nellysugu/">
         <img class="social-media-icon" src="./resources/linkedin-logo.png" alt="linkedin logo" srcset="" />
       </a>
     </div>
@@ -82,7 +82,8 @@
                 src="https://media.licdn.com/dms/image/C5603AQGqneMiAwropQ/profile-displayphoto-shrink_800_800/0?e=1572480000&v=beta&t=uELe0Fw3jz3ApFcMlYoWqvyP3xCJBvn3GF-NrHJ5XZE"
                 alt="Michelle Jung profile picture">
               <h5 class="card-title">
-                <a href="https://www.linkedin.com/in/hi-michelle/">Michelle Jung</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/hi-michelle/">Michelle
+                  Jung</a>
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
@@ -129,7 +130,8 @@
                 src="https://media.licdn.com/dms/image/C5603AQHHswcwB2gUKQ/profile-displayphoto-shrink_800_800/0?e=1572480000&v=beta&t=lHYkmbMHUilDQYpBkIJ1P-x38jKWLXQxbW1ZpEnMJBI"
                 alt="Nico Cueva profile picture">
               <h5 class="card-title">
-                <a href="https://www.linkedin.com/in/nicolas-nico-cueva-19b4a15a/">Nico Cueva</a>
+                <a target="_blank" rel="noopener noreferrer"
+                  href="https://www.linkedin.com/in/nicolas-nico-cueva-19b4a15a/">Nico Cueva</a>
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
@@ -153,7 +155,8 @@
                 src="https://media.licdn.com/dms/image/C5603AQFQMO6JZwd7DA/profile-displayphoto-shrink_800_800/0?e=1572480000&v=beta&t=Ji06qFcOIBJCfrlTJZNavdxNnen5on0pLYq9N1TLtY0"
                 alt="Benjamin Dally profile picture">
               <h5 class="card-title">
-                <a href="https://www.linkedin.com/in/dallybenjamin/">Benjamin Dally</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/dallybenjamin/">Benjamin
+                  Dally</a>
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
@@ -177,7 +180,8 @@
                 src="https://media.licdn.com/dms/image/C5603AQF5tV5raN2Hmw/profile-displayphoto-shrink_800_800/0?e=1572480000&v=beta&t=5EyOhCixvdDzYv_wNuWzUpOqNLSW4SeGeHn10xqp4nc"
                 alt="Sherif Mahmoud profile picture">
               <h5 class="card-title">
-                <a href="https://www.linkedin.com/in/sherif-mahmoud-93605b2/">Sherif Mahmoud
+                <a target="_blank" rel="noopener noreferrer"
+                  href="https://www.linkedin.com/in/sherif-mahmoud-93605b2/">Sherif Mahmoud
                 </a>
               </h5>
               <h6 class="card-subtitle mb-2 text-muted">
@@ -211,7 +215,8 @@
                 src="https://media.licdn.com/dms/image/C5603AQHxvNvryKHypA/profile-displayphoto-shrink_800_800/0?e=1572480000&v=beta&t=cJDL6-EmkMhoBGJMxYtw_aIXIf28EwDnXzdEkOJgl4U"
                 alt="Daniel Feinstat profile picture">
               <h5 class="card-title">
-                <a href="https://www.linkedin.com/in/daniel-feinstat/">Daniel Feinstat</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/daniel-feinstat/">Daniel
+                  Feinstat</a>
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
@@ -232,7 +237,7 @@
                 src="https://media.licdn.com/dms/image/C5103AQHgyeBuYNWC2g/profile-displayphoto-shrink_800_800/0?e=1572480000&v=beta&t=QOcrgb9UbETgxZjH4wtEFPkngCkrp-cHwadaXgoTDXc"
                 alt="Andy Wood profile picture">
               <h5 class="card-title">
-                <a href="https://www.linkedin.com/in/andyxwood/">Andy Wood</a>
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/andyxwood/">Andy Wood</a>
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
@@ -256,7 +261,8 @@
                 src="https://media.licdn.com/dms/image/C5103AQGsTqWSqP6vuQ/profile-displayphoto-shrink_800_800/0?e=1572480000&v=beta&t=YyWPramiPXpfpavar730H2nEms3ASQQpYk3ki7wbB20"
                 alt="Jeffrey Lafazan profile picture">
               <h5 class="card-title">
-                <a href="https://www.linkedin.com/in/jeffrey-lafazan-33981857/">Jeffrey Lafazan</a>
+                <a target="_blank" rel="noopener noreferrer"
+                  href="https://www.linkedin.com/in/jeffrey-lafazan-33981857/">Jeffrey Lafazan</a>
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
@@ -294,8 +300,8 @@
               from scratch.
             </p>
             <div class="project-call-to-action">
-              <a target="blank" href="https://www.youtube.com/channel/UC9t-XaHAaBVQZqNJU27uIxw"
-                class="btn btn-primary">Check it out</a>
+              <a target="_blank" rel="noopener noreferrer"
+                href="https://www.youtube.com/channel/UC9t-XaHAaBVQZqNJU27uIxw" class="btn btn-primary">Check it out</a>
             </div>
 
           </div>
@@ -312,8 +318,8 @@
               you.
             </p>
             <div class="project-call-to-action">
-              <a target="blank" href="https://apps.apple.com/us/app/brim-basketball/id1449649789"
-                class="btn btn-primary">Download</a>
+              <a target="_blank" rel="noopener noreferrer"
+                href="https://apps.apple.com/us/app/brim-basketball/id1449649789" class="btn btn-primary">Download</a>
             </div>
 
           </div>
