Make target blank safe

--- a/index.html
+++ b/index.html
@@ -333,7 +333,8 @@
               Amaturufu is a famous card game in Rwanda
             </p>
             <div class="project-call-to-action">
-              <a href="https://apps.apple.com/us/app/amaturufu/id1070901538" class="btn btn-primary">Download</a>
+              <a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/us/app/amaturufu/id1070901538"
+                class="btn btn-primary">Download</a>
             </div>
 
           </div>
@@ -343,7 +344,8 @@
           <div class="card-body">
 
             <div class="project-call-to-action">
-              <a href="https://apps.apple.com/us/app/250moji/id1221577636" class="btn btn-primary">Download</a>
+              <a target="_blank" rel="noopener noreferrer" href="https://apps.apple.com/us/app/250moji/id1221577636"
+                class="btn btn-primary">Download</a>
             </div>
           </div>
         </div>
@@ -363,7 +365,8 @@
               can go back into history and tell you which Google Doodle was used on which date.
             </p>
             <div class="project-call-to-action">
-              <a href="https://jonly03.github.io/Gooddlistory/" class="btn btn-primary">What in the doodle?</a>
+              <a target="_blank" rel="noopener noreferrer" href="https://jonly03.github.io/Gooddlistory/"
+                class="btn btn-primary">What in the doodle?</a>
             </div>
           </div>
         </div>
