--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="#">About </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#reviews">Testimonials</a>
+          <a class="nav-link" href="#testimonials">Testimonials</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#projects">Projects</a>
@@ -71,10 +71,10 @@
   </section>
 
   <!--Reviews-->
-  <section id="reviews">
+  <section id="testimonials">
     <h2 class="section-header">Testimonials</h2>
     <div class="section-carousel">
-      <div id="reviews-container">
+      <div id="testimonials-container">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
             <div class="reviewer">
