Add more testimonials

--- a/index.html
+++ b/index.html
@@ -79,6 +79,85 @@
           <div class="card-body">
             <div class="reviewer">
               <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQFo_AkYI9ewxA/profile-displayphoto-shrink_800_800/0?e=1574294400&v=beta&t=_49KATBsIOTKPcmyq97fuduZLOGAHwieYiso9p1uJFM"
+                alt="Morgan profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/morgancrosta/">Morgan
+                  Crosta</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Fullstack Developer, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              Nelly was my instructor for a full stack development boot camp. I entered his class with minimal coding
+              knowledge, and on the many occasions that I felt overwhelmed, discouraged and ready to quit, Nelly was by
+              my side giving me encouragement and making sure I understood the material. Nelly is the most all-in,
+              dedicated teacher I've ever had- he consistently went above and beyond for me. He was my tutor, my mentor
+              and is now a lifelong friend. His passion for coding and life itself is so sincere, he truly is a bright
+              light in this world. Thank you for everything Nelly!
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQG8mTM5pMsiog/profile-displayphoto-shrink_200_200/0?e=1574294400&v=beta&t=r0NURn-1OnhUKOwnL-fDOxPbrFnoojTsGpf5dgc9rkc"
+                alt="Ifra profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/ifraaijaz/">Ifra
+                  Aijaz</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                App Engineering Specialist, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              "You cannot teach a man anything, you can only help him find it within himself" - Galileo
+              <br />
+              <br />
+              Those are the words I have seen Nelly live by everyday as a teacher. He did not just do the job of
+              teaching us coding but helped us find it within ourselves on days when most of us almost gave up.
+              Not only a great teacher but a gem of a human being who lives for others. His passion to help others makes
+              him one of the best teachers I have come across in my life. He has the skill to teach complex subjects in
+              a way that not only makes it easy to understand but also gives you the confidence of tackling it on your
+              own. I can not recommend Nelly enough and believe that whoever gets him as a teacher should consider
+              themselves as the lucky ones.
+              Way to go Nelly!
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQHFCu22-JsP7A/profile-displayphoto-shrink_200_200/0?e=1574294400&v=beta&t=1VwIQ9-f3CCoD_J2h0qeUi8K-cFeplMfG1_hQnnVTSk"
+                alt="Shannon profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/shannonleeedgar/">Shannon
+                  Edgar</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Senior Graphic Designer & Web Developer, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              Nelly taught my Full Stack Bootcamp at UC Davis. The instruction I received was superb, Nelly has a way of
+              breaking down complex material into much simpler steps. His commitment to making sure each and every
+              student understood the difficult material was remarkable, often meeting students in off time for private
+              tutoring. Nelly approaches everything in life with passion and drive. I can't recommend him highly enough.
+              Easily the most committed teacher I have ever had as well as a simply phenomenal human.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
                 src="https://media.licdn.com/dms/image/C5603AQHqQoxP_8wcgQ/profile-displayphoto-shrink_800_800/0?e=1573689600&v=beta&t=uSAX-YzgOVEp4D4gngDQVU6rHycoK07lDWuuVW5vhhY"
                 alt="Michelle Jung profile picture">
               <h5 class="card-title">
@@ -87,7 +166,7 @@
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
-                Student @ UC Davis
+                Web Developer, former student
               </h6>
             </div>
             <p class="card-text review-quote">
@@ -127,6 +206,110 @@
           <div class="card-body">
             <div class="reviewer">
               <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQEV3GLFlrKRjA/profile-displayphoto-shrink_200_200/0?e=1574294400&v=beta&t=b5HZ6kcQNBq-WS0X3BgW8bXAPAvXM3CxzkVhK92Io7g"
+                alt="Falon profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/falon-darville/">Falon
+                  Darville</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Software Engineer, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              I was one of Nelly's students. Nelly is an unrelenting powerhouse. I knew this from my first day in his
+              class, when he recognized the tremendous empowerment my class was festering and birthing by signing up for
+              this intensive 6 month coding program.
+              <br />
+              <br />
+              He walked in and assumed his position a true teacher, someone who goes beyond using words to explain
+              concepts. He lights up when he's helping others. Nelly is a leader and his energy electrifies the air
+              around him. Anyone who walks into the same room as him will know that he is making an impact beyond
+              measure.
+              <br />
+              <br />
+              He brings more to the table than just knowledge. Nelly brings fiery determination to pull this world up by
+              its bootstraps. He unrelentingly believes in his students and their futures. And I know this because he
+              never failed to see us in our true potential.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQEH9eB7lxmrKw/profile-displayphoto-shrink_200_200/0?e=1574294400&v=beta&t=kGXAwS5wFFSIQsVWgPFsq-N-LB7CiFCiDJG2K3PqbLw"
+                alt="Madhav profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/madhavparekh/">Madhav
+                  Parekh</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Lead Software Engineer, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              As an Instructor, Nelly has amazing ability to break down programming languages & concepts, computer
+              technologies, and complex algorithms into easy to grasp instructions for entire class. I looked forward to
+              attending each and every session and learning something new from him. Thank you Nelly.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQEnX8JloF-ABQ/profile-displayphoto-shrink_800_800/0?e=1574294400&v=beta&t=2aEz8KZUZQMD_tqtOQztOeLC4LoCEP_KJiU8L76Slpw"
+                alt="Jackson profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer"
+                  href="https://www.linkedin.com/in/jackson-harris-iii-a2546845/">Jackson
+                  Harris III</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Software Engineer, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              Nelly is an accomplished mentor, developer, and teacher. He has been instrumental in my progression as a
+              developer and the same can be said for many others. He's the kind of person you want as an instructor or a
+              team mate. This is because Nelly has overcame more adversity than a large portion of students he will
+              encounter. He has cultivated a well of patience that extends to students as well as colleagues. Although
+              patient he is one of the hardest working people that I have encountered in any field. This is seen in his
+              work, his teaching, and how he approaches life in general. I really can not say enough great things about
+              Nelly. If you have the opportunity to work with Nelly in any capacity I would highly recommend it.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQErVwyv85UpyA/profile-displayphoto-shrink_200_200/0?e=1574294400&v=beta&t=iHTAO6VPsQVjhP9s6Hkvh2eKHlXt6l0W8oeGfjoTSmI"
+                alt="Max profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer"
+                  href="https://www.linkedin.com/in/maksym-galyliak-95464551/">Maksym Galyliak</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Fullstack Web Developer, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              Nelly has a great ability to teach complex things in approachable manner. He explains not only new
+              material, but also a way to study it. He is pleasure to work with and I really enjoyed being guided and
+              mentored by him.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
                 src="https://media.licdn.com/dms/image/C5603AQHHswcwB2gUKQ/profile-displayphoto-shrink_800_800/0?e=1572480000&v=beta&t=lHYkmbMHUilDQYpBkIJ1P-x38jKWLXQxbW1ZpEnMJBI"
                 alt="Nico Cueva profile picture">
               <h5 class="card-title">
@@ -135,7 +318,7 @@
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
-                Student @ Northwestern University
+                AWS Solutions Architect, former student
               </h6>
             </div>
             <p class="card-text review-quote">
@@ -160,7 +343,7 @@
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
-                Student @ UC Davis
+                Fullstack Engineer, former student
               </h6>
             </div>
             <p class="card-text review-quote">
@@ -185,7 +368,7 @@
                 </a>
               </h5>
               <h6 class="card-subtitle mb-2 text-muted">
-                Student @ Northwestern University
+                Software Consultant, former student
               </h6>
             </div>
             <p class="card-text review-quote">
@@ -220,7 +403,7 @@
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
-                Student @ UC Davis
+                Freelance Web Developer, former student
               </h6>
             </div>
             <p class="card-text review-quote">
@@ -241,7 +424,7 @@
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
-                Student @ Northwestern University
+                Web Developer, former student
               </h6>
             </div>
             <p class="card-text review-quote">
@@ -266,7 +449,7 @@
               </h5>
 
               <h6 class="card-subtitle mb-2 text-muted">
-                Student @ UC Davis
+                Telecom Engineer, former student
               </h6>
             </div>
             <p class="card-text review-quote">
@@ -278,6 +461,84 @@
               and challenged. Nelly is a genuinely kind person and has the character every manager and leader should
               have.
               He is a true asset and I couldn't have found a better instructor for Full Stack Development.
+            </p>
+          </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C4D03AQGs1LcvIb2f2A/profile-displayphoto-shrink_800_800/0?e=1574294400&v=beta&t=wR6zWPQ7rVHESrPRtBC8hdybXEg_ChGoGP_YTR-M9wE"
+                alt="Joe profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/josephleecy/">Joseph
+                  Lee</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Software Engineer, former co-worker
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              Nelly is one of the most amicable and inspiring, which are some traits of what great instructors need to
+              have, people I have ever met. His strong technical background with his outstanding communication skills
+              make the most complexed software development ideas and methodologies seem simple and fathomable.
+              <br />
+              <br />
+              I was very interested in Full Stack development and did not know where to start. Not only did Nelly gave
+              me an abundance of resources and directions to get started, but also demonstrated creating a web app along
+              with explanations, and he made it seem very easy! His interactive and humorous teaching methodologies
+              really capture people’s interests and attentions.
+              <br />
+              <br />
+              Therefore, I am very confident that Nelly will be a successful engineer, instructor and mentor with his
+              robust technical, communication and teaching skills along with his cordial personality.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5103AQF9H8L86sJX_Q/profile-displayphoto-shrink_200_200/0?e=1574294400&v=beta&t=ou-vHorfRixKNg0nC9eVUNzKXJ8MpCIiaCX9bULbJ8w"
+                alt="Leo profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/leo-qiu/">Leo Qiu</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Co-Founder of <a href="https://foodnome.com/" target="_blank" rel="noopener noreferrer">Foodnome</a>,
+                former co-worker
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              I taught under Nelly in a Coding Bootcamp for 6 months, and I would say Nelly has the rare talent that
+              glues the entire classroom of students together and pushes them forward. He did not leave any student
+              behind. He was a great teacher and true leader, and any team would be lucky to have him.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQFKIJep3imHeA/profile-displayphoto-shrink_800_800/0?e=1574294400&v=beta&t=rLMABN7RwatAAofZx4xeIIM63IU0VQtaIwEmzl874ww"
+                alt="Ryan profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer"
+                  href="https://www.linkedin.com/in/ryan-canty-a49b9b35/">Ryan Canty</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Cloud Engineer, former classmate
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              Nelly is a very enthusiastic and passionate individual. When he is given a task he does everything it
+              takes to go above and beyond the requirements. I worked with him on our senior capstone project and he has
+              been one of my great friends ever since. I would recommend anyone to have Nelly on their team because his
+              dedication, eagerness and innovation would benefit any project.
             </p>
           </div>
         </div>
