--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
         <img class="social-media-icon" src="./resources/linkedin-logo.png" alt="linkedin logo" srcset="" />
       </a>
     </div>
+
+    <button class="btn btn-primary learn_call_to_action">
+      <a style="color: white; text-decoration: none;" href="#contact">Learn how to build websites and apps from scratch
+        with me</a>
+    </button>
+
   </section>
 
   <!--Reviews-->
@@ -546,6 +552,16 @@
     </div>
   </section>
 
+  <!--Contact-->
+  <section id="contact">
+    <h2 class="section-header">Learn with me</h2>
+    <div id="contact-container">
+      <iframe id="google-doc"
+        src="https://docs.google.com/forms/d/e/1FAIpQLSffD7RHfTutiFv_eFS32Ao2MWJo4x9vSCAxiacqCKf0babnrQ/viewform?embedded=true"
+        width="100%" height="2200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </div>
+  </section>
+
   <!--Projects-->
   <section id="projects">
     <h2 class="section-header">Projects I am proud of</h2>
@@ -632,16 +648,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
-  <!--Contact-->
-  <section id="contact">
-    <h2 class="section-header">Learn with me</h2>
-    <div id="contact-container">
-      <iframe id="google-doc"
-        src="https://docs.google.com/forms/d/e/1FAIpQLSffD7RHfTutiFv_eFS32Ao2MWJo4x9vSCAxiacqCKf0babnrQ/viewform?embedded=true"
-        width="100%" height="2200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
   </section>
 
