remove duplicate testimonials

--- a/index.html
+++ b/index.html
@@ -353,12 +353,12 @@
               </h6>
             </div>
             <p class="card-text review-quote">
-              Nelly is everything you want in a teacher and mentor. He went
-              above and beyond during my time studying at Northwestern to help
-              me and others solidify their skills and learn new ones. He pushes
-              you to be a better person in and outside of work. More people
-              should know his story on how he got where he is today, and join
-              him for the ride ahead
+              I am very happy to recommend Nelly as an instructor, coder, and person. Nelly is the kind of teacher that
+              students hope to have. He comes to class every day with a boundless energy, infectious passion, and an
+              engaging smile. Everyday, he puts the students first and foremost. In addition, he daily displayed his
+              ability to code. He seemed to know that he had to keep working harder than the students to make sure they
+              were best served, and that is just what he did. I have seen him work through React, Javascript, Node,
+              HTML, CSS, Handlebars, Express, MySQL, MongoDB, and many others.
             </p>
           </div>
         </div>
