Add smooth scrolling

--- a/index.html
+++ b/index.html
@@ -69,10 +69,15 @@
       </a>
     </div>
 
-    <button class="btn btn-primary learn_call_to_action">
-      <a style="color: white; text-decoration: none;" href="#contact">Learn how to build websites and apps from scratch
-        with me</a>
-    </button>
+    <div class="learn_call_to_action">
+      <a style="color: white; text-decoration: none;" href="#contact">
+        <button class="btn btn-primary">
+          Learn how to build websites and apps from scratch
+          with me
+        </button>
+      </a>
+    </div>
+
 
   </section>
 
