Add mentor form

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#mentor">Mentor</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -70,11 +73,15 @@
     </div>
 
     <div class="learn_call_to_action">
-      <a style="color: white; text-decoration: none;" href="#contact">
-        <button class="btn btn-primary">
-          Learn how to build websites and apps from scratch
-          with me
-        </button>
+      <a style="color: white; text-decoration: none; margin: 5px;" href="#contact" class="btn btn-primary">
+
+        Learn how to build websites and apps from scratch
+        with me
+
+      </a>
+      <a style="color: white; text-decoration: none; margin: 5px;" href="#mentor" class="btn btn-info">
+        Help mentor students in Kigali (Jan 7 - Jan 30, 2020)
+
       </a>
     </div>
 
@@ -566,6 +573,17 @@
         width="100%" height="2200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
   </section>
+
+  <!-- Mentor (just for Kigali) -->
+  <section id="mentor">
+    <h2 class="section-header">Kigali Jan 2020 Mentors</h2>
+    <div id="mentor-container">
+      <iframe
+        src="https://docs.google.com/forms/d/e/1FAIpQLSewQVJAjNvtCuJABqmkZePFc7xIUL086LKO-sO0GcB1-png2w/viewform?embedded=true"
+        width="640" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </div>
+  </section>
+
 
   <!--Projects-->
   <section id="projects">
