Add more recommendations

--- a/index.html
+++ b/index.html
@@ -432,6 +432,70 @@
           <div class="card-body">
             <div class="reviewer">
               <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQHtZLp12dKyTQ/profile-displayphoto-shrink_800_800/0?e=1579132800&v=beta&t=W2o6nH0d5XsZBAjooEeX88HTiE9fHmxEMUjU01iEkUg"
+                alt="Haddassah profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer"
+                  href="https://www.linkedin.com/in/haddassah-mendoza-elias-03273837/">Haddassah Mendoza-Elias</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Web Developer, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              Nelly did not just teach me how to code, he opened an entire new world. I brought absolutely no coding
+              experience to the table and was very unsure of how far I could go in this career path before I took his
+              course. But not only did I learn React, Node, Express, HTML, CSS, Bootstrap, Javascript, jQuery, RESTful
+              APIs, MongoDB/Mongoose, SQL/Sequelize, MVC, Heroku Deployment, and Git-Github, but MOST IMPORTANTLY he
+              taught me how to think and problem solve. But how did he do it?
+              <br />
+              <br />
+              Nelly led extra class sessions, reviews, and even one on one help to anyone who needed it. I was a
+              successful student because I had a diligent instructor who not only would not let me fail, but not even
+              imagine that anything less than success was a possibility.
+              <br />
+              <br />
+              On graduation day I knew that Nelly had fulfilled his promise to my class that anything we wanted to
+              create, we could, no limitations! Not only did I learn, but I became so confident in my abilities and
+              inspired at how coding can change people's lives, that I became a teaching assistant and one on one tutor
+              for the course Nelly taught me. I love web development, I love clean code, I love problem-solving, all of
+              which stem from a charismatic and compassionate instructor like Nelly. There is not a person who can walk
+              away without being enriched after learning with him.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQHWjS-WOp8j5A/profile-displayphoto-shrink_800_800/0?e=1579132800&v=beta&t=GnbG_Z7CBlSDrOylvR-DzZJI1GJx7AuKF94ke5Fod9M"
+                alt="Peter profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/peter-kohler/">Peter
+                  Kohler</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Technical Analyst, former student
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              When I think back to my time as a student in Nelly's Northwestern Full Stack Coding Bootcamp class, I
+              think about how that class changed my life. I came into the class knowing a small amount of code and I am
+              happy to say that I am now a software engineer for a Fortune 500 company. Nelly played a huge part in
+              inspiring me to love software development and teach me the fundamentals I needed to know. Nelly is
+              extremely technically skilled, but his true gift is his ability to teach. I have come to find that this is
+              a rare skill in software development and I appreciate Nelly taking the to invest in each and every one of
+              his students. It was truly a pleasure being in Nelly's class and if you have a similar goal of becoming a
+              software developer, Nelly will do everything to help you reach that goal.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
                 src="https://media.licdn.com/dms/image/C5603AQEkZwj4aBFr9A/profile-displayphoto-shrink_800_800/0?e=1579132800&v=beta&t=1cQRWypEPDJfxCvBwOkd_rsAsJsAkM8YUnCoah9aoyc"
                 alt="Vanessa profile picture">
               <h5 class="card-title">
@@ -470,6 +534,40 @@
               alongside him as I began my journey into software development. His amiable personality, comprehensive
               knowledge base, problem-solving ability, and willingness to assist are unparalleled. I wish him all the
               luck on his current and future endeavors.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <div class="reviewer">
+              <img class="reviewer-img-thumbnail"
+                src="https://media.licdn.com/dms/image/C5603AQFLztNFH_WhIw/profile-displayphoto-shrink_800_800/0?e=1579132800&v=beta&t=8OcWXNh7OgnGI_bmMdSA_mHwt0dBfA-C7_zdH_2Vksk"
+                alt="Holly profile picture">
+              <h5 class="card-title">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/hollyzoba/">Holly
+                  Zoba</a>
+              </h5>
+
+              <h6 class="card-subtitle mb-2 text-muted">
+                Owner - Influence Sales Training, former tutee
+              </h6>
+            </div>
+            <p class="card-text review-quote">
+              Nelly was my tutor, and let's be honest, my lifesaver, when I decided to go back to school to learn coding
+              when I was almost 50 years old! I was so fortunate to have found him because not only is he gifted at
+              helping others learn to code, he is also completely inspiring. He loves to code and he loves to help
+              others learn to code. It is impossible not to catch his enthusiasm for the craft.
+              <br />
+              <br />
+              I have to share one of many memorable stories of Nelly's commitment to learning. I had a project due the
+              next day and he was helping me through some struggles I was having with my part. At some point we learned
+              that my partner on the project had dropped the ball and I was determined to finish the entire project
+              before the presentation. Nelly stayed on the video call with me ALL NIGHT! We finished at 5am. That shows
+              a lot of commitment - but here is the really interesting part. The entire time we were working, he never
+              just gave me the answers, he always made me learn. Even at 3am when I was said, oh come on, just tell me
+              the answer!!! He would patiently suggest a different viewpoint or approach, and I would learn something
+              new! I will be forever grateful for his wisdom and his encouragement. If you are on the fence about asking
+              for help - talk to Nelly right away! You will be glad you did.
             </p>
           </div>
         </div>
